# impl-rust-fn-to-python

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  build-conda-cos7-v2.yml  build-conda-cos7.yml  build-conda.yml  build-wheels.yml  maturin-canary.yml
recipe/: meta.yaml  meta.yml
src/: lib.rs
test/: test_polars.py
test/data/: pivot_input.csv
